# haskell-rec-def

./: CHANGELOG.md  CNAME  Data-POrder.html  Data-Propagator-Class.html  Data-Propagator-Naive.html  Data-Propagator-P2.html  Data-Propagator-Purify.html  Data-Recursive-Bool.html  Data-Recursive-DualBool.html  Data-Recursive-Examples.html  Data-Recursive-Internal.html  Data-Recursive-Map.html  Data-Recursive-Set.html  LICENSE  Parser.hs  ParserParser.hs  README.md  RParser.hs  RParser2.hs  System-IO-RecThunk.html  default.nix  dejafu.hs  doc-index.html  doc-index.json  doctests.hs  examples.hs  flake.nix  index.html  rec-def.cabal  rec-def.haddock  shell.nix
.github/workflows/: docs.yml  haskell-ci.yml
Data/: POrder.hs  Recursive.hs
Data/Propagator/: Class.hs  Naive.hs  P2.hs  Purify.hs
Data/Recursive/: Bool.hs  CanBe.hs  Class.hs  DualBool.hs  Examples.hs  FastSet.hs  Internal.hs  Map.hs  MustBe.hs  Propagator.hs  R.hs  Set.hs  Thunk.hs
Data/Recursive/Bool/: Internal.hs
Data/Recursive/CanBe/: Internal.hs
Data/Recursive/MustBe/: Internal.hs
Data/Recursive/Propagator/: Bool.hs  Class.hs  Naive.hs  P2.hs  Seminaive.hs
Data/Recursive/R/: Internal.hs
Data/Recursive/Set/: Internal.hs
System/IO/: RecThunk.hs
src/: Data.POrder.html  Data.Propagator.Class.html  Data.Propagator.Naive.html  Data.Propagator.P2.html  Data.Propagator.Purify.html  Data.Recursive.Bool.html  Data.Recursive.DualBool.html  Data.Recursive.Examples.html  Data.Recursive.Internal.html  Data.Recursive.Map.html  Data.Recursive.Set.html  System.IO.RecThunk.html
tests/: dejafu.hs  doctests.hs  spaceleak.hs
