cabal-version:      2.4
name:               rec-def
version:            0.1
synopsis:           Recusively defined values
description:
   This library provides safe APIs that allow you to define and calculate
   values recursively, and still get a result out:
   .
   > let s1 = rInsert 23 s2
   >     s2 = rInsert 42 s1
   > in getR s1
   .
   will not loop, but rather  produce the set @fromList [23,42]@
   .
   See [https://github.com/nomeata/haskell-rec-def/blob/master/examples.hs](examples.hs)
   for more examples, or just browse the modules
   .
   * "Data.Recursive.Bool"
   * "Data.Recursive.Set"
   * "Data.Recursive.DualBool"
   .
   For the (unsafe) building blocks to build such APIs, see
   .
   * "Data.Recursive.R.Internal" for the wrapper that turns an IO-implemented
     propagator into a pure data structure
   * "Data.Recursive.Propagator.Naive" for a naive propagator implementation
   * "Data.Recursive.Propagator.P2" for a smarter propagator implementation for
     the two-point lattice, i.e. 'Bool'

homepage:           https://github.com/nomeata/haskell-rec-def
bug-reports:        https://github.com/nomeata/haskell-rec-def/issues/new
license:            BSD-2-Clause
license-file:       LICENSE
author:             Joachim Breitner
maintainer:         mail@joachim-breitner.de
copyright:          2022 Joachim Breitner
category:           Data
extra-source-files:
    CHANGELOG.md
    README.md
    examples.hs
tested-with: GHC==9.2.1, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4

library
    exposed-modules: Data.Recursive.Bool
    exposed-modules: Data.Recursive.DualBool
    exposed-modules: Data.Recursive.Set
    exposed-modules: Data.POrder
    exposed-modules: System.IO.RecThunk
    exposed-modules: Data.Recursive.R
    exposed-modules: Data.Recursive.R.Internal
    exposed-modules: Data.Recursive.Propagator.Naive
    exposed-modules: Data.Recursive.Propagator.Class
    exposed-modules: Data.Recursive.Propagator.P2

    build-depends:    base >= 4.9 && < 5
    build-depends:    containers >= 0.5.11 && < 0.7

    default-language: Haskell2010

test-suite doctest
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    default-language: Haskell2010
    ghc-options:      -threaded

    build-depends:    rec-def
    build-depends:    base >= 4.9 && < 5
    build-depends:    doctest ^>= 0.18.2


test-suite dejafu
    type:             exitcode-stdio-1.0
    other-modules:    Data.Recursive.Propagator.Naive
    other-modules:    System.IO.RecThunk
    main-is:          dejafu.hs
    default-language: Haskell2010
    ghc-options:      -threaded

    build-depends:    base >= 4.9 && < 5
    build-depends:    containers >= 0.5.11 && < 0.7
    build-depends:    concurrency ^>= 1.11.0.2
    build-depends:    dejafu ^>= 2.4.0.3
    build-depends:    tasty
    build-depends:    tasty-dejafu
    build-depends:    random
